# spicacpp

./: .clang-format  .cproject  .gitignore  .project  BinaryTree.hpp  BinomialHeap.hpp  BitFile.cpp  BitFile.hpp  BoundedBuffer.hpp  BoundedList.hpp  CMakeLists.txt  CMakePresets.json  Date.cpp  Doxyfile  FileVector.hpp  Graph.hpp  Makefile  README.md  Rational.hpp  RegistryKey.cpp  RegistryKey.hpp  RexxString.cpp  RexxString.hpp  Semaphore.cpp  Semaphore.hpp  SingleList.hpp  SpicaCpp.cbp  SpicaCpp.sln  SpicaCpp.tgt  SpicaCpp.vcxproj  SpicaCpp.vcxproj.filters  SpicaCpp.workspace  TODO.md  ThreadPool.cpp  ThreadPool.hpp  Timer.cpp  Timer.hpp  UnitTestManager.cpp  UnitTestManager.hpp  UnitTestManager.xsl  (+28 more)
bench/: bubble_speed.cpp  insertion_speed.cpp  merge_speed.cpp  quick_speed.cpp
benchmarks/: insertion_speed.cpp
check/: BinomialHeap_tests.cpp  BoundedList_tests.cpp  CheckCpp.cbp  CheckCpp.tgt  CheckCpp.vcxproj  CheckCpp.vcxproj.filters  Graph_tests.cpp  Makefile  RexxString_tests.cpp  RexxString_testsMT.cpp  Semaphore_tests.cpp  SingleList_tests.cpp  Timer_tests.cpp  Tree_tests.cpp  VeryLong_tests.cpp  depend.dep  sort_tests.cpp  str_tests.cpp  str_testsMT.cpp  string_utilities_tests.cpp  u_tests.cpp  u_tests.hpp
doc/: BoundedList.tex  FileVector.html  FileVector.xht  Makefile  String-notes.txt  UnitTestManager.xsd  index-cpp.xht  index.html  overview.xht  wincom.html  windebug.html
docs/: UtmSampleInstance.xml  default.css  index.html  overview.html  wincom.html  windebug.html
examples/: BoundedListSample.cpp  DateSample.cpp
pending/: Semaphore.cpp  (+1 more)
(+87 files in other folders)
